--- a/styles/base.less
+++ b/styles/base.less
@@ -51,14 +51,14 @@ atom-text-editor {
   }
 }
 
-atom-text-editor .search-results .marker .region,
-:host .search-results .marker .region {
+atom-text-editor .search-results .syntax--marker .region,
+atom-text-editor .search-results .syntax--marker .region {
   background-color: transparent;
   border: 1px solid @syntax-result-marker-color;
 }
 
-atom-text-editor .search-results .marker.current-result .region,
-:host .search-results .marker.current-result .region {
+atom-text-editor .search-results .syntax--marker.current-result .region,
+atom-text-editor .search-results .syntax--marker.current-result .region {
   border: 1px solid @syntax-result-marker-color-selected;
 }
 
@@ -67,12 +67,12 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .syntax--entity {
-  &.name.type {
+  &.syntax--name.syntax--type {
     color: @yellow-light;
     text-decoration: underline;
   }
 
-  &.other.inherited-class {
+  &.syntax--other.syntax--inherited-class {
     color: @blue;
   }
 }
@@ -80,22 +80,22 @@ atom-text-editor .search-results .marker.current-result .region,
 .syntax--keyword {
   color: @yellow;
 
-  &.control {
+  &.syntax--control {
     color: @yellow-light;
   }
 
-  &.operator {
+  &.syntax--operator {
     color: @blue-light;
   }
 
-  &.other.special-method {
+  &.syntax--other.syntax--special-method {
     color: @cyan;
   }
 
-  &.other.unit {
+  &.syntax--other.syntax--unit {
     color: @red-light;
 
-    &.css {
+    &.syntax--css {
       color: @blue-light;
     }
   }
@@ -104,7 +104,7 @@ atom-text-editor .search-results .marker.current-result .region,
 .syntax--storage {
   color: @yellow-light;
 
-  &.doc {
+  &.syntax--doc {
     color: @light-gray;
   }
 }
@@ -112,28 +112,28 @@ atom-text-editor .search-results .marker.current-result .region,
 .syntax--constant {
   color: @yellow-light;
 
-  &.character.escape {
+  &.syntax--character.syntax--escape {
     color: @blue-light;
   }
 
-  &.numeric {
+  &.syntax--numeric {
     color: @yellow;
   }
 
-  &.other.color {
+  &.syntax--other.syntax--color {
     color: @blue-light;
   }
 
-  &.other.symbol {
+  &.syntax--other.syntax--symbol {
     color: @blue;
   }
 
-  &.language {
+  &.syntax--language {
     color: @red-light;
   }
 
-  &.object.key {
-    .string.unquoted {
+  &.syntax--object.syntax--key {
+    .syntax--string.syntax--unquoted {
       color: @blue;
     }
   }
@@ -142,19 +142,19 @@ atom-text-editor .search-results .marker.current-result .region,
 .syntax--variable {
   color: @red;
 
-  &.interpolation {
+  &.syntax--interpolation {
     color: darken(@red, 10%);
   }
 
-  &.parameter.function {
+  &.syntax--parameter.syntax--function {
     color: @syntax-text-color;
   }
 
-  &.property {
+  &.syntax--property {
     color: @blue-light;
   }
 
-  &.language {
+  &.syntax--language {
     color: @yellow-light;
   }
 }
@@ -167,136 +167,136 @@ atom-text-editor .search-results .marker.current-result .region,
 .syntax--string {
   color: @blue-light;
 
-  &.quoted {
+  &.syntax--quoted {
     color: @yellow-light;
   }
 
-  &.regexp {
+  &.syntax--regexp {
     color: @blue;
 
-    .source.ruby.embedded {
+    .syntax--source.syntax--ruby.syntax--embedded {
       color: @red-light;
     }
   }
 
-  &.other.link {
+  &.syntax--other.syntax--link {
     color: @red;
   }
 }
 
 .syntax--punctuation {
 
-  &.separator {
+  &.syntax--separator {
     color: @blue-light;
   }
 
-  &.definition {
-    &.comment {
+  &.syntax--definition {
+    &.syntax--comment {
       color: @light-gray;
     }
 
-    &.string,
-    &.variable,
-    &.parameters,
-    &.array {
+    &.syntax--string,
+    &.syntax--variable,
+    &.syntax--parameters,
+    &.syntax--array {
       color: @syntax-text-color;
     }
 
-    &.heading,
-    &.identity {
+    &.syntax--heading,
+    &.syntax--identity {
       color: @cyan;
     }
 
-    &.bold {
+    &.syntax--bold {
       color: @yellow-light;
       font-weight: bold;
     }
 
-    &.italic {
+    &.syntax--italic {
       color: @yellow;
       font-style: italic;
     }
   }
 
-  &.section.embedded {
+  &.syntax--section.syntax--embedded {
     color: darken(@red, 10%);
   }
 }
 
 .syntax--support {
-  &.class {
+  &.syntax--class {
     color: @yellow-light;
   }
 
-  &.function  {
+  &.syntax--function  {
     color: @blue-light;
 
-    &.any-method {
+    &.syntax--any-method {
       color: @cyan;
     }
   }
 
-  &.property-name {
+  &.syntax--property-name {
     color: @cyan;
   }
 
-  &.property-value {
+  &.syntax--property-value {
     color: @yellow-light;
   }
 }
 
 .syntax--entity {
-  &.name.function {
+  &.syntax--name.syntax--function {
     color: @cyan;
   }
 
-  &.name.class, &.name.type.class {
+  &.syntax--name.syntax--class, &.syntax--name.syntax--type.syntax--class {
     color: @yellow-light;
   }
 
-  &.name.section {
+  &.syntax--name.syntax--section {
     color: @cyan;
   }
 
-  &.name.tag {
+  &.syntax--name.syntax--tag {
     color: @red;
     text-decoration: underline;
   }
 
-  &.other.attribute-name {
+  &.syntax--other.syntax--attribute-name {
     color: @green;
 
-    &.id {
+    &.syntax--id {
       color: @yellow;
     }
   }
 }
 
 .syntax--meta {
-  &.class {
+  &.syntax--class {
     color: @yellow-light;
   }
 
-  &.link {
+  &.syntax--link {
     color: @red-light;
   }
 
-  &.require {
+  &.syntax--require {
     color: @red-light;
   }
 
-  &.selector {
+  &.syntax--selector {
     color: @yellow;
   }
 
-  &.separator {
+  &.syntax--separator {
     background-color: @gray;
     color: @syntax-text-color;
   }
 
-  &.group.braces {
-    .variable.readwrite,
-    .variable.object {
+  &.syntax--group.syntax--braces {
+    .syntax--variable.syntax--readwrite,
+    .syntax--variable.syntax--object {
       color: @red-light;
     }
   }
@@ -307,48 +307,48 @@ atom-text-editor .search-results .marker.current-result .region,
 }
 
 .syntax--markup {
-  &.bold {
+  &.syntax--bold {
     color: @red-light;
     font-weight: bold;
   }
 
-  &.changed {
+  &.syntax--changed {
     color: @yellow;
   }
 
-  &.deleted {
+  &.syntax--deleted {
     color: @red;
   }
 
-  &.italic {
+  &.syntax--italic {
     color: @yellow;
     font-style: italic;
   }
 
-  &.heading .punctuation.definition.heading {
+  &.syntax--heading .syntax--punctuation.syntax--definition.syntax--heading {
     color: @cyan;
   }
 
-  &.inserted {
+  &.syntax--inserted {
     color: @blue;
   }
 
-  &.list {
+  &.syntax--list {
     color: @red;
   }
 
-  &.quote {
+  &.syntax--quote {
     color: @red-light;
   }
 
-  &.raw.inline {
+  &.syntax--raw.syntax--inline {
     color: @blue;
   }
 }
 
 .syntax--source.syntax--gfm .syntax--markup {
   -webkit-font-smoothing: auto;
-  &.heading {
+  &.syntax--heading {
     color: @blue;
   }
 }
